cmake_minimum_required(VERSION 3.25)
project(HMCLauncher)
if(MSVC)
    add_compile_options(/utf-8 /D_UNICODE /W4)
else()
    add_compile_options(-municode -Wall -Wextra -Wpedantic)
endif()
if(MSVC)
    add_link_options(/ENTRY:wWinMainCRTStartup)
else()
    add_link_options(-municode)
endif()
OPTION(ENABLE_MINGW_STATIC_LINK_LIBSTDCXX "Link the C++ standard library statically to the executable file(mingw only)." ON)
if(ENABLE_MINGW_STATIC_LINK_LIBSTDCXX AND MINGW)
    add_link_options(-static)
endif()
set(CMAKE_WIN32_EXECUTABLE ON)
add_executable(HMCLauncher WIN32 HMCL.rc java.cpp main.cpp os.cpp install.cpp stdafx.cpp Version.cpp)
target_link_libraries(HMCLauncher Version)
target_link_libraries(HMCLauncher wininet)
install(TARGETS HMCLauncher)